# battery-monitor-web

./: .env.example  .gitignore  README.md  app.py  config.py  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test.yml
client/: battery_post.py
clients/: battery_post.py
models/: battery_log.py
services/: battery_service.py
static/: detail.html  index.html  script.js  style.css
tests/: test_app.py  test_battery_service.py  test_clients.py  test_config.py  test_models.py
utils/: logger.py
